updated profile pic

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p>emoneil@wharton.upenn.edu</p>
-        <p class="view"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn<small>orderedlist/minimal</small></a></p>
-        <p class="view"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume<small>orderedlist/minimal</small></a></p>
+        <img>lsrc="profile-pic.jpg"</img>
+        <p class="view"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a></p>
+        <p class="view"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
       </header>
       <section>
         <h1>GitHub Flavored Markdown</h1>
