--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
         <p class="view"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
-
         <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at The Wharton School and the
+        University of Pennsylvania.</p>
 
-        <p>Roses are red<br>
-        Violets are blue</p>
-
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
-
-        <p>Roses are red<br><br>
-        Violets are blue</p>
-
-        <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
+        <p>Throughout college, I have pursued my interest in social impact, research, entrepreneurship, and technology. During my
+        internship at Fulphil throughout my sophomore year, I jumpstarted its social entrepreneurship curriculum. In Summer
+        2020, I interned at ServiceNow, envisioning and measuring customer value in the enterprise software space. In Spring
+        2021 at Endeavor, I scouted entrepreneurs from socially diverse backgrounds and created entrepreneur profiles that
+        formed the groundwork for International Selection Panels, which determine the scalable companies accepted into
+        Endeavor’s entrepreneurial network. In Summer 2021, I conducted research at Carnegie Mellon’s Human-Computer Interaction
+        Institute, using human-centered design to develop a platform for training nurses to conduct motivational interviewing.
+        And this fall, for my honors thesis, I am working on a mental health application of natural language generation.</p>
+        
+        <p>I love learning about technology and consuming content on the impact of technology on our society and obsess over
+        technology with a powerful social mission. I am passionate about telling stories with data and care a lot about mental
+        health advocacy. My mission is to advance mental health empowerment and support through technology, and I intend to
+        start a company dedicated to this mission in the future.</p>
 
         <h2>A bit of the GitHub spice</h2>
 
