--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p>emoneil@wharton.upenn.edu</p>
-        <img>lsrc="profile-pic.jpg"</img>
-        <p class="view"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a></p>
-        <p class="view"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
+        <img>src="profile-pic.jpg" alt="profile pic"</img>
+        <p><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a>
+        <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
       </header>
       <section>
         <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
@@ -198,8 +198,7 @@ end
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
