made updates to website

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
       </header>
       <section>
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
-
-        <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at The Wharton School and the
-        University of Pennsylvania.</p>
+        <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at 
+        <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
+        <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
 
         <p>Throughout college, I have pursued my interest in social impact, research, entrepreneurship, and technology. During my
         internship at Fulphil throughout my sophomore year, I jumpstarted its social entrepreneurship curriculum. In Summer
@@ -41,9 +40,26 @@
         health advocacy. My mission is to advance mental health empowerment and support through technology, and I intend to
         start a company dedicated to this mission in the future.</p>
 
-        <h2>A bit of the GitHub spice</h2>
+        <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
+        <h2>Research</h2>
+
+        <p><b>Honors Thesis in Cognitive Science</b><br>
+        Application of natural language generation for peer-to-peer counseling.</p>
+
+        <p><b>CMU HCII Research</b><br>
+        Research for design rationale of training platform for nurses learning motivational interviewing including
+        exploring applications of role-playing, peer feedback, and reflection.</p>
+
+        <p><b>CMU HCII REU Fellowship</b><br>
+        Created <a href="https://pinmi-summer.netlify.app/">prototype</a> for training platform for nurses learning motivational interviewing. 
+        Conducted and iterated design based on user testing.</p>
+
+        <h2>Internships</h2>
+
+        <h2>Other Data Projects</h2>
+
+        <h2>Creative</h2>
 
         <ul>
           <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
