made updates to details

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Emma O'Neil</h1>
-        <p>emoneil@wharton.upenn.edu</p>
+        <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
         <img src="./assets/profile-pic.png"/>
         <p><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
@@ -45,173 +45,64 @@
         <h2>Research</h2>
 
         <p><b>Honors Thesis in Cognitive Science</b><br>
-        Application of natural language generation for peer-to-peer counseling.</p>
+        Application of natural language generation for peer-to-peer counseling. Primary advisor is Lyle Ungar.</p>
 
-        <p><b>CMU HCII Research</b><br>
+        <p><b>CMU Human-Computer Interaction Institute Research</b><br>
         Research for design rationale of training platform for nurses learning motivational interviewing including
-        exploring applications of role-playing, peer feedback, and reflection.</p>
+        exploring applications of role-playing, peer feedback, and reflection. Working with PhD student Tianying Chen.</p>
 
-        <p><b>CMU HCII REU Fellowship</b><br>
-        Created <a href="https://pinmi-summer.netlify.app/">prototype</a> for training platform for nurses learning motivational interviewing. 
-        Conducted and iterated design based on user testing.</p>
+        <p><b>CMU Human-Computer Interaction Institute REU Fellowship</b><br>
+        Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
+        Conducted and iterated on design through user testing. 
+        See poster <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">here</a>.
+        Advised by Laura Dabbish and Robert Kraut.</p>
+
+        <p><b>MindCORE Lila R. Gleitman Fellowship</b><br>
+        Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
+        Presented 15-minute talk at research symposium (slides <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">here</a>).
+        Advised by John McCoy.</p>
+
+        <p><b>USC Brain and Creativity Institute Research</b><br>
+        Conducted literature review of the effects of musical training on early reading development. Advised by Assal Habibi.</p>
 
         <h2>Internships</h2>
+        <p><b>Endeavor: Entrepreneurship Selection & Growth (ESG)</b><br>
+        Wrote business profiles for companies under consideration in International Selection Panels, 
+        researching the business and the local context. Pioneered project for targeting socially diverse entrepreneurs, 
+        researching and presenting female- and minority-founded companies with diverse uses of technology to the Endeavor selection team.</p>
+
+        <p><b>ServiceNow: Value Management</b><br>
+        Created executive summaries for 15+ customers across industries and template asset for 
+        use by external marketing team. Pioneered database of insights from 
+        customer-led presentations from the <a href="https://knowledge.servicenow.com/">Knowledge 2020 digital conference</a>. 
+        Created product demos for the Value Management Plaform.</p>
+
+        <p><b>Fulphil: Project Management</b><br>
+        Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
+        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.</p>
 
         <h2>Other Data Projects</h2>
+        <p><b>Mental Health Support on Reddit</b><br>
+        A <a href="https://oneilemma.medium.com/mental-health-support-on-reddit-64e5f3d38923?source=friends_link&sk=undefined">text analysis</a> 
+        of the social media mental health community: an exploration of mental health subreddits and a comparison with caption content of Instagram mental health influencers.</p>
+
+        <p><b>Female Founders in Tech</b><br>
+        A <a href="https://oneilemma.medium.com/the-underrepresentation-of-female-founders-in-tech-and-the-difference-in-employee-morale-f8da2b908738?source=friends_link&sk=2f1c9ac8c5eefa7e1eac2fd097b08122">data exploration</a> 
+        of founder gender representation in the tech industry and internal perceptions in male and female-founded tech companies.</p>
+
+        <p><b>Vegan in Philly</b><br>
+        A <a href="https://embracingplantfood.weebly.com/">data exploration</a> of vegan food in Philadelphia with Tableau.</p>
 
         <h2>Creative</h2>
+        <p><b>Music</b><br>
+        Studying violin for 15 years. Write, perform, and produce music: check out 
+        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>. 
+        Recognized as a semifinalist in February 2019 in the 
+        <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.</p>
 
-        <ul>
-          <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
-          <li>User@SHA ref: <a href="https://github.com/mojombo/product/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
-          <li>User/Project@SHA: <a href="https://github.com/mojombo/god/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
-          <li>#Num: <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
-          <li>User/#Num: mojombo#1</li>
-          <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
-        </ul>
+        <p><b>Photography</b><br>
+        Sampling of photos here. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland.</p>
 
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
-
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
-
-        <h2>Math is hard, let's go shopping</h2>
-
-        <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
-
-        <p>Triangles man! a^2 + b^2 = c^2</p>
-
-        <h2>We all like making lists</h2>
-
-        <p>The above header should be an H2 tag. Now, for a list of fruits:</p>
-
-        <ul>
-          <li>Red Apples</li>
-          <li>Purple Grapes</li>
-          <li>Green Kiwifruits</li>
-        </ul>
-
-        <p>Let's get crazy:</p>
-
-        <ol>
-          <li>
-            <p>This is a list item with two paragraphs. Lorem ipsum dolor<br>
-            sit amet, consectetuer adipiscing elit. Aliquam hendrerit<br>
-            mi posuere lectus.</p>
-
-            <p>Vestibulum enim wisi, viverra nec, fringilla in, laoreet<br>
-            vitae, risus. Donec sit amet nisl. Aliquam semper ipsum<br>
-            sit amet velit.</p>
-          </li>
-          <li><p>Suspendisse id sem consectetuer libero luctus adipiscing.</p></li>
-        </ol>
-
-        <p>What about some code <strong>in</strong> a list? That's insane, right?</p>
-
-        <ol>
-          <li>
-            <p>In Ruby you can map like this:</p>
-
-            <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre>
-          </li>
-          <li>
-            <p>In Rails, you can do a shortcut:</p>
-
-            <pre><code>['a', 'b'].map(&amp;:uppercase)</code></pre>
-          </li>
-        </ol>
-
-        <p>Some people seem to like definition lists</p>
-
-        <dl>
-          <dt>Lower cost</dt>
-          <dd>The new version of this product costs significantly less than the previous one!</dd>
-          <dt>Easier to use</dt>
-          <dd>We've changed the product so that it's much easier to use!</dd>
-        </dl>
-
-        <h2>I am a robot</h2>
-
-        <p>Maybe you want to print <code>robot</code> to the console 1000 times. Why not?</p>
-
-        <pre><code>def robot_invasion
-  puts("robot " * 1000)
-end
-</code></pre>
-
-        <p>You see, that was formatted as code because it's been indented by four spaces.</p>
-
-        <p>How about we throw some angle braces and ampersands in there?</p>
-
-        <pre><code>&lt;div class="footer"&gt;
-    &amp;copy; 2004 Foo Corporation
-&lt;/div&gt;
-</code></pre>
-
-        <h2>Set in stone</h2>
-
-        <p>Preformatted blocks are useful for ASCII art:</p>
-
-        <pre>             ,-.
-    ,     ,-.   ,-.
-   / \   (   )-(   )
-   \ |  ,.&gt;-(   )-&lt;
-    \|,' (   )-(   )
-     Y ___`-'   `-'
-     |/__/   `-'
-     |
-     |
-     |    -hrr-
-  ___|_____________
-</pre>
-
-        <h2>Playing the blame game</h2>
-
-        <p>If you need to blame someone, the best way to do so is by quoting them:</p>
-
-        <blockquote>
-        <p>I, at any rate, am convinced that He does not throw dice.</p>
-        </blockquote>
-
-        <p>Or perhaps someone a little less eloquent:</p>
-
-        <blockquote>
-        <p>I wish you'd have given me this written question ahead of time so I<br>
-        could plan for it... I'm sure something will pop into my head here in<br>
-        the midst of this press conference, with all the pressure of trying to<br>
-        come up with answer, but it hadn't yet...</p>
-
-        <p>I don't want to sound like<br>
-        I have made no mistakes. I'm confident I have. I just haven't - you<br>
-        just put me under the spot here, and maybe I'm not as quick on my feet<br>
-        as I should be in coming up with one.</p>
-        </blockquote>
-
-        <h2>Table for two</h2>
-
-        <table>
-          <tbody>
-        <tr>
-            <th>ID</th>
-        <th>Name</th>
-        <th>Rank</th>
-          </tr>
-          <tr>
-            <td>1</td>
-        <td>Tom Preston-Werner</td>
-        <td>Awesome</td>
-          </tr>
-          <tr>
-            <td>2</td>
-        <td>Albert Einstein</td>
-        <td>Nearly as awesome</td>
-          </tr>
-        </tbody>
-        </table>
-
-        <h2>Crazy linking action</h2>
-
-        <p>I get 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from<br>
-        <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
         <p><small>Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
