--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
-        <img src="./assets/profile-pic.png"/>
-        <p><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
-        <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">Resume</a></p>
+        <img src="./images/profile-pic.png"/>
+        <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
+        <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing"><img src="./images/resume.png" alt="PDF Resume"
+            style="width:16px;height:16px;">PDF Resume</a>
       </header>
       <section>
         <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at 
@@ -44,40 +45,40 @@
 
         <h2>Research</h2>
 
-        <p><b>Honors Thesis in Cognitive Science</b><br>
+        <p><b>Honors Thesis in Cognitive Science | Aug. 2021 -</b><br>
         Application of natural language generation for peer-to-peer counseling. Primary advisor is Lyle Ungar.</p>
 
-        <p><b>CMU Human-Computer Interaction Institute Research</b><br>
+        <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 -</b><br>
         Research for design rationale of training platform for nurses learning motivational interviewing including
         exploring applications of role-playing, peer feedback, and reflection. Working with PhD student Tianying Chen.</p>
 
-        <p><b>CMU Human-Computer Interaction Institute REU Fellowship</b><br>
+        <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
         Conducted and iterated on design through user testing. 
         See poster <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">here</a>.
         Advised by Laura Dabbish and Robert Kraut.</p>
 
-        <p><b>MindCORE Lila R. Gleitman Fellowship</b><br>
+        <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
         Presented 15-minute talk at research symposium (slides <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">here</a>).
         Advised by John McCoy.</p>
 
-        <p><b>USC Brain and Creativity Institute Research</b><br>
+        <p><b>USC Brain and Creativity Institute Research | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Assal Habibi.</p>
 
         <h2>Internships</h2>
-        <p><b>Endeavor: Entrepreneurship Selection & Growth (ESG)</b><br>
+        <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles for companies under consideration in International Selection Panels, 
         researching the business and the local context. Pioneered project for targeting socially diverse entrepreneurs, 
         researching and presenting female- and minority-founded companies with diverse uses of technology to the Endeavor selection team.</p>
 
-        <p><b>ServiceNow: Value Management</b><br>
+        <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
         Created executive summaries for 15+ customers across industries and template asset for 
         use by external marketing team. Pioneered database of insights from 
         customer-led presentations from the <a href="https://knowledge.servicenow.com/">Knowledge 2020 digital conference</a>. 
         Created product demos for the Value Management Plaform.</p>
 
-        <p><b>Fulphil: Project Management</b><br>
+        <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
         Curriculum included e.g., design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.</p>
 
