--- a/index.html
+++ b/index.html
@@ -18,28 +18,27 @@
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
         <img src="./images/profile-pic.png"/>
-        <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
-        <a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing"><img src="./images/resume.png" alt="PDF Resume"
-            style="width:16px;height:16px;">PDF Resume</a>
+        <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
+        <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">PDF Resume</a>
       </header>
       <section>
         <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at 
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
         <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
 
-        <p>Throughout college, I have pursued my interest in social impact, research, entrepreneurship, and technology. During my
-        internship at Fulphil throughout my sophomore year, I jumpstarted its social entrepreneurship curriculum. In Summer
-        2020, I interned at ServiceNow, envisioning and measuring customer value in the enterprise software space. In Spring
-        2021 at Endeavor, I scouted entrepreneurs from socially diverse backgrounds and created entrepreneur profiles that
-        formed the groundwork for International Selection Panels, which determine the scalable companies accepted into
-        Endeavor’s entrepreneurial network. In Summer 2021, I conducted research at Carnegie Mellon’s Human-Computer Interaction
-        Institute, using human-centered design to develop a platform for training nurses to conduct motivational interviewing.
-        And this fall, for my honors thesis, I am working on a mental health application of natural language generation.</p>
+        <p>My interests lie broadly in the areas of social impact, research, entrepreneurship, and technology. 
+          My research experience lies within human-computer interaction and computational social science. I am especially excited by research 
+          exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
+          My honors thesis is using NLG with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
+          In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon’s Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
+          motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype.</p>
         
-        <p>I love learning about technology and consuming content on the impact of technology on our society and obsess over
-        technology with a powerful social mission. I am passionate about telling stories with data and care a lot about mental
-        health advocacy. My mission is to advance mental health empowerment and support through technology, and I intend to
-        start a company dedicated to this mission in the future.</p>
+        <p>I have spent time at both for- and non-profits, startups and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+          customer value in the enterprise software space at <a href="https://www.servicenow.com/">ServiceNow</a>, and building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a href="https://fulphil.org/">Fulphil</a>.</p>
+
+        <p>Other things I think a lot about are the societal impacts of technology and fostering an inclusive CS community. 
+          I am passionate about telling stories with data and care a lot about mental health advocacy. 
+          My mission is to advance mental health empowerment and support through technology.</p>
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
