--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <p>Other things I think a lot about are the societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about telling stories with data and care a lot about mental health advocacy. 
+          I have been volunteering at crisis hotlines since 2016 and am currently a Crisis Counselor at <a href="https://www.crisistextline.org/">Crisis Textline</a>.
           My mission is to advance mental health empowerment and support through technology.</p>
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
