--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
-        <img src="./images/profile-pic.png"/>
+        <img src="./images/profile-pic.png" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">PDF Resume</a>
       </header>
