made updates to links

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
-        Conducted and iterated on design through user testing. 
-        See poster <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">here</a>.
-        Advised by Laura Dabbish and Robert Kraut.</p>
+        Conducted and iterated on design through user testing. Advised by Laura Dabbish and Robert Kraut.
+        <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.</p>
 
         <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
-        Presented 15-minute talk at research symposium (slides <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">here</a>).
-        Advised by John McCoy.</p>
+        Presented 15-minute talk at research symposium. Advised by John McCoy. 
+        <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>.</p>
 
         <p><b>USC Brain and Creativity Institute Research | June 2016 - June 2018</b><br>
         Conducted literature review of the effects of musical training on early reading development. Advised by Assal Habibi.</p>
@@ -80,7 +79,8 @@
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
-        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.</p>
+        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
+        <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
 
         <h2>Other Data Projects</h2>
         <p><b>Mental Health Support on Reddit</b><br>
@@ -96,13 +96,14 @@
 
         <h2>Creative</h2>
         <p><b>Music</b><br>
-        Studying violin for 15 years. Write, perform, and produce music: check out 
-        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>. 
+        Studying violin for 15 years. Write, perform, and produce music. 
         Recognized as a semifinalist in February 2019 in the 
-        <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.</p>
+        <a href="https://songwritingcompetition.com/">International Songwriting Competition</a>.
+        <a href="https://soundcloud.com/emma_oneil">SoundCloud</a>.</p>
 
         <p><b>Photography</b><br>
-        Sampling of photos here. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland.</p>
+        I love capturing nature and seeing others' nature photography. ND Awards International Photo Contest 2019 Honorable Mention for image taken in Iceland. 
+        <a href="https://photos.app.goo.gl/gZxgEAJNEymCj6UX7">Sample of my photos</a>.</p>
 
       </section>
       <footer>
