--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
-        Conducted and iterated on design through user testing. Advised by Laura Dabbish and Robert Kraut.
+        Conducted and iterated on design through user testing with nurses at Highmark Health. Advised by Laura Dabbish and Robert Kraut.
         <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.</p>
 
         <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
@@ -67,9 +67,9 @@
 
         <h2>Internships</h2>
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
-        Wrote business profiles for companies under consideration in International Selection Panels, 
-        researching the business and the local context. Pioneered project for targeting socially diverse entrepreneurs, 
-        researching and presenting female- and minority-founded companies with diverse uses of technology to the Endeavor selection team.</p>
+        Wrote business profiles to inform evaluation in International Selection Panels, 
+        researching business and local context. Pioneered project for targeting socially diverse entrepreneurs, 
+        researching and presenting female- and minority-founded companies with diverse uses of technology to selection team.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
         Created executive summaries for 15+ customers across industries and template asset for 
