made updates to description

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
         <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
 
-        <p>My interests lie broadly in the areas of social impact, research, entrepreneurship, and technology. 
+        <p>My interests exist at the intersection of research, technology, entrepreneurship, and social impact. 
           My research experience lies within human-computer interaction and computational social science. I am especially excited by research 
           exploring the use of innovative technology to improve the lives of those living with mental health challenges and their communities.
           My honors thesis is using NLG with the goal of aiding peer counselors in generating messages employing the clinical skill of reflection.  
