made updates to description

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">PDF Resume</a>
       </header>
       <section>
-        <p>I’m an undergraduate from LA studying Statistics, Cognitive Science, and Computer Science at 
+        <p>I’m an undergraduate from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
         <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
 
@@ -33,7 +33,7 @@
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon’s Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype.</p>
         
-        <p>I have spent time at both for- and non-profits, startups and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+        <p>I have spent time at startups, non-profits, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
           customer value in the enterprise software space at <a href="https://www.servicenow.com/">ServiceNow</a>, and building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a href="https://fulphil.org/">Fulphil</a>.</p>
 
         <p>Other things I think a lot about are the societal impacts of technology and fostering an inclusive CS community. 
