made updates to description

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
           In Summer 2021, I conducted research at <a href="https://www.hcii.cmu.edu/">Carnegie Mellon’s Human-Computer Interaction Institute</a>, developing a platform for training nurses to conduct 
           motivational interviewing. I have continued research on the project, framing the evidence-based design rationale for the developed prototype.</p>
         
-        <p>I have spent time at startups, non-profits, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
-          customer value in the enterprise software space at <a href="https://www.servicenow.com/">ServiceNow</a>, and building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a href="https://fulphil.org/">Fulphil</a>.</p>
+        <p>I have spent time at non-profits, startups, and mid-size companies. I focused on the search and selection of entrepreneurs at <a href="https://endeavor.org/">Endeavor</a>,
+          building a curriculum to help empower the next generation of socially impactful entrepreneurs at <a
+          href="https://fulphil.org/">Fulphil</a>, and underscoring customer value in the enterprise software space at <a href="https://www.servicenow.com/">ServiceNow</a>.</p>
 
         <p>Other things I think a lot about are the societal impacts of technology and fostering an inclusive CS community. 
           I am passionate about telling stories with data and care a lot about mental health advocacy. 
