made updates to site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Emma O'Neil</h1>
         <p><a href="mailto:emoneil@wharton.upenn.edu">emoneil@wharton.upenn.edu</a></p>
-        <img src="./images/profile-pic.png" style="width:200px;height:200px;"/><br>
+        <img src="./images/profile-pic.jpeg" style="width:200px;height:200px;"/><br>
         <img src="./images/linkedin.png" alt="Linkedin" style="width:15px;height:15px;padding-right:10px;"><a href="https://www.linkedin.com/in/emma-oneil/">LinkedIn</a><br>
         <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">PDF Resume</a>
       </header>
@@ -47,7 +47,7 @@
         <h2>Research</h2>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 -</b><br>
-        Application of natural language generation for peer-to-peer counseling. Primary advisor is Lyle Ungar.</p>
+        Application of natural language generation for peer-to-peer counseling. Primary advisor is Prof. Lyle Ungar.</p>
 
         <p><b>CMU Human-Computer Interaction Institute Research | Aug. 2021 -</b><br>
         Research for design rationale of training platform for nurses learning motivational interviewing including
@@ -55,32 +55,32 @@
 
         <p><b>CMU Human-Computer Interaction Institute REU Fellow | June - Aug. 2021</b><br>
         Developed interactive <a href="https://pinmi-summer.netlify.app/">prototype</a> for platform to train nurses learning motivational interviewing. 
-        Conducted and iterated on design through user testing with nurses at Highmark Health. Advised by Laura Dabbish and Robert Kraut.
+        Conducted and iterated on design through user testing with nurses at <a href="https://www.highmarkhealth.org/hmk/index.shtml">Highmark Health</a>. Advised by Profs. Laura Dabbish and Robert Kraut.
         <a href="https://drive.google.com/file/d/1huKhBgcuVSJAw5O4io6QdvJZJvOm1PeU/view?usp=sharing">Poster</a>.</p>
 
         <p><b>MindCORE Lila R. Gleitman Fellow | June 2019 - Aug. 2019</b><br>
         Piloted study examining whether people find it more difficult to make predictions for people who think differently from them. 
-        Presented 15-minute talk at research symposium. Advised by John McCoy. 
+        Presented 15-minute talk at research symposium. Advised by Prof. John McCoy. 
         <a href="https://docs.google.com/presentation/d/1lJBOgjke5geZbdwsBAH24VCbugxAgrdg/edit?usp=sharing&ouid=104991045083918685632&rtpof=true&sd=true">Slides</a>.</p>
 
         <p><b>USC Brain and Creativity Institute Research | June 2016 - June 2018</b><br>
-        Conducted literature review of the effects of musical training on early reading development. Advised by Assal Habibi.</p>
+        Conducted literature review of the effects of musical training on early reading development. Advised by Prof. Assal Habibi.</p>
 
         <h2>Internships</h2>
         <p><b>Endeavor: Entrepreneurship Selection & Growth | Dec. 2020 - May 2021</b><br>
         Wrote business profiles to inform evaluation in International Selection Panels, 
         researching business and local context. Pioneered project for targeting socially diverse entrepreneurs, 
-        researching and presenting female- and minority-founded companies with diverse uses of technology to selection team.</p>
+        researching and presenting female and minority-founded companies with diverse technology applications to selection team.</p>
 
         <p><b>ServiceNow: Value Management | May 2020 - Aug. 2020</b><br>
-        Created executive summaries for 15+ customers across industries and template asset for 
+        Created executive summaries for 15+ customers across industries and anonymized template for 
         use by external marketing team. Pioneered database of insights from 
         customer-led presentations from the <a href="https://knowledge.servicenow.com/">Knowledge 2020 digital conference</a>. 
-        Created product demos for the Value Management Plaform.</p>
+        Created product demos for the Value Management Platform.</p>
 
         <p><b>Fulphil: Project Management | Aug. 2019 - June 2020</b><br>
         Created social entrepreneurship curriculum for distribution in schools across the nation and explored competitive offerings. 
-        Curriculum included e.g., design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
+        Curriculum included design thinking, stakeholder analysis, user interviews, understanding competition, KPIs, pricing, branding, UN SDGs, entrepreneurial mindset.
         <a href="https://fulphil.teachable.com/p/social-entrepreneurship">Curriculum</a>.</p>
 
         <h2>Other Data Projects</h2>
