made updates to site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KJHQHV9CJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-1KJHQHV9CJ');
+    </script>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Emma O'Neil</title>
@@ -22,7 +32,7 @@
         <img src="./images/resume.png" alt="PDF Resume" style="width:15px;height:15px;padding-right:10px;"><a href="https://drive.google.com/file/d/1D9tj593HU6tXSTXbaG6u7Y1Kg00zPljl/view?usp=sharing">PDF Resume</a>
       </header>
       <section>
-        <p>I’m an undergraduate graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
+        <p>I’m an undergraduate senior graduating in December 2022 from Los Angeles studying Statistics, Cognitive Science, and Computer Science at 
         <a href="https://www.wharton.upenn.edu/">The Wharton School</a> and the
         <a href="https://www.upenn.edu/">University of Pennsylvania</a>.</p>
 
