made updates to data projects section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
         A <a href="https://oneilemma.medium.com/mental-health-support-on-reddit-64e5f3d38923?source=friends_link&sk=undefined">text analysis</a> 
         of the social media mental health community: an exploration of mental health subreddits and a comparison with caption content of Instagram mental health influencers.</p>
 
+        <p><b>Understanding and Predicting Reported Mental Health</b><br>
+        A <a href="https://github.com/emoneil/final-project/blob/main/report/final-project-report-copy.pdf">report</a>
+        on predicting reported days that one's mental health was not good (BRFSS CDC data) in the past month based on social and economic variables, 
+        measures of the receival of clinical care, health factors, and the availability of mental health facilities offering resources by state (N-MHSS data).</p>
+
         <p><b>Female Founders in Tech</b><br>
         A <a href="https://oneilemma.medium.com/the-underrepresentation-of-female-founders-in-tech-and-the-difference-in-employee-morale-f8da2b908738?source=friends_link&sk=2f1c9ac8c5eefa7e1eac2fd097b08122">data exploration</a> 
         of founder gender representation in the tech industry and internal perceptions in male and female-founded tech companies.</p>
