added languages and frameworks/tools

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
+        <p>Languages: Java, Javascript, Python, SQL, HTML/CSS OCaml.
+        <br/>
+        Frameworks/Tools: React, Node.js, Pandas, Scikit-learn, Git, LaTeX.</p>
+
         <h2>Research</h2>
 
         <p><b>Honors Thesis in Cognitive Science | Aug. 2021 -</b><br>
