made updates to frameworks

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
-        <p>Languages: Java, Javascript, Python, SQL, HTML/CSS OCaml.
+        <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS OCaml.
         <br/>
-        Frameworks/Tools: React, Node.js, Pandas, Scikit-learn, Git, LaTeX.</p>
+        Frameworks/Tools: Figma, React, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.</p>
 
         <h2>Research</h2>
 
