--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
-        <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS OCaml.
+        <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS, OCaml.
         <br/>
         Frameworks/Tools: Figma, React, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.</p>
 
