made updates to langs/frameworks

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS, OCaml.
         <br/>
-        Frameworks/Tools: Figma, React, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.</p>
+        Frameworks/Tools: Figma, React.js, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.</p>
 
         <h2>Research</h2>
 
