made updates to tools

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
 
         <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS, OCaml.
         <br/>
-        Frameworks/Tools: Figma, React.js, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.</p>
+        Frameworks/Tools: Figma, React.js, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.
+        <br/>
+        Design: wireframing and prototyping, REST API design, user flow diagrams, UML class and sequence diagrams.
+        <br/>
+        Research methods: survey design, experimental design, statistical analysis, user interviews and usability testing.
+        <br/>
+        Statistical tools: hypothesis testing, regression and classification tasks, text analysis, cluster analysis, factor analysis and dimensionality reduction, conjoint analysis, machine learning, collaborative filtering.</p>
 
         <h2>Research</h2>
 
