made updates to skills

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
         <p>View my coursework <a href="https://airtable.com/shrD95EC5EwYTAbmW">here</a>.</p>
 
-        <p>Languages: Java, R, Javascript, Python, SQL, HTML/CSS, OCaml.
+        <p><b>Languages</b>: Java, R, Javascript, Python, SQL, HTML/CSS, OCaml.
         <br/>
-        Frameworks/Tools: Figma, React.js, Node.js, Pandas, Scikit-learn, Tableau, Git, LaTeX.
+        <b>Frameworks/Software</b>: Figma, React.js, Node.js, Pandas, Tableau, Git, LaTeX.
         <br/>
-        Design: wireframing and prototyping, REST API design, user flow diagrams, UML class and sequence diagrams.
+        <b>Design</b>: wireframing and prototyping, REST API design, user flow diagrams, UML class and sequence diagrams.
         <br/>
-        Research methods: survey design, experimental design, statistical analysis, user interviews and usability testing.
+        <b>Research methods</b>: survey design, experimental design, statistical analysis, user interviews and usability testing.
         <br/>
-        Statistical tools: hypothesis testing, regression and classification tasks, text analysis, cluster analysis, factor analysis and dimensionality reduction, conjoint analysis, machine learning, collaborative filtering.</p>
+        <b>Statistical tools</b>Statistical tools: hypothesis testing, regression and classification tasks, text analysis, cluster analysis, factor analysis and dimensionality reduction, conjoint analysis, machine learning, collaborative filtering.</p>
 
         <h2>Research</h2>
 
