--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <br/>
         <b>Research methods</b>: survey design, experimental design, statistical analysis, user interviews and usability testing.
         <br/>
-        <b>Statistical tools</b>: hypothesis testing, regression and classification tasks, text analysis, cluster analysis, factor analysis and dimensionality reduction, conjoint analysis, machine learning, collaborative filtering.</p>
+        <b>Statistical tools</b>: hypothesis testing, regression and classification, text analysis, cluster analysis, factor analysis and dimensionality reduction, machine learning.</p>
 
         <h2>Research</h2>
 
