--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <br/>
         <b>Frameworks/Software</b>: Figma, React.js, Node.js, Pandas, Tableau, Git, LaTeX.
         <br/>
-        <b>Design</b>: wireframing and prototyping, REST API design, user flow diagrams, UML class and sequence diagrams.
+        <b>Design</b>: wireframing and prototyping, REST API design, user flow diagrams, UML class and sequence diagrams, ER diagrams.
         <br/>
         <b>Research methods</b>: survey design, experimental design, statistical analysis, user interviews and usability testing.
         <br/>
